fix: JDK 25 compatibility: auto-timeout in BlockingIOCometSupport, exclude 33 incompatible test to kept backward compatibility